started nba paper adaptation

--- a/thesis.tex
+++ b/thesis.tex
@@ -297,16 +297,16 @@ Dr. Christophe PALLIER & Doctoral advisor & Research Director\\& & INSERM/CEA/SA
 \part{Contribution -- Modelling -- The neural dynamics of binding in language with the Neural Blackboard Architecture}
 \cleardoublepage
 % Introduction
-% \input{part_IV/chapter_1.tex}
-%\FloatBarrier
+\input{part_IV/chapter_1.tex}
+\FloatBarrier
 % Methods
-% \input{part_IV/chapter_2.tex}
+\input{part_IV/chapter_2.tex}
 %\FloatBarrier
-% Results
-% \input{part_IV/chapter_3.tex}
+%Results
+%\input{part_IV/chapter_3.tex}
 %\FloatBarrier
 % Discussion
-% \input{part_IV/chapter_4.tex}
+%\input{part_IV/chapter_4.tex}
 %\FloatBarrier
 
 
